Update next outcomes

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,24 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-family: 'Raleway', sans-serif;
 }
+
+button {
+    border: none;
+    color: black;
+    color: white;
+    background-color: #03727d;
+    border-radius: 10px;
+    padding: 10px 20px;
+    box-shadow: 1px 2px 7px #f2f2f2;
+    cursor: pointer;
+    transition: all 0.15s ease-in-out;
+}
+
+button:hover {
+    transform: scale(.95);
+    background-color: #04909d;
+}
+
+button.active {
+    background-color: #059eac;
+}
